Further fixes to the modal on smaller screen sizes and made it clear the inputs on a submission

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -7,7 +7,8 @@
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 999;
   display: flex;
-  padding: 0 19px 0;
+  justify-content: center;
+  padding: 30px 19px 0;
   visibility: hidden;
   opacity: 0;
   transition: visibility 0.5s linear, opacity 0.5s linear;
@@ -82,7 +83,6 @@
   flex-direction: column;
   align-content: center;
   flex-wrap: wrap;
-  padding-top: 41px;
 }
 
 .modal__caption {
@@ -101,6 +101,7 @@
   background-color: black;
   color: white;
   font-family: Inter, Arial, sans-serif;
+  border: none;
   border-radius: 2px;
   margin: 48px auto 0;
   font-weight: 400;
@@ -131,6 +132,7 @@
   cursor: pointer;
   width: 40px;
   height: 40px;
+  padding: 0;
 }
 
 .modal__close:hover {
@@ -138,10 +140,6 @@
 }
 
 @media screen and (max-width: 650px) {
-  /*   .modal__image {
-    margin: 0 45px;
-  } */
-
   .modal__container {
     padding-left: 22px;
     padding-right: 22px;
@@ -163,7 +161,18 @@
     width: 26px;
   }
 
+  .modal__close-form {
+    margin-right: 50px;
+    top: -40px;
+  }
+
   .modal__header {
     font-size: 18px;
+    line-height: 21.78px;
+  }
+
+  .modal__submit {
+    font-size: 14px;
+    line-height: 16.94px;
   }
 }
